# sigma

./: Cargo.toml  README.md
src/: lib.rs
src/graph/: mod.rs  op_graph.rs
src/maths/: interpolation.rs  mod.rs  note_values.rs
src/operators/: adjustable.rs  dual_op.rs  filter_op.rs  meta_op.rs  mod.rs  source_op.rs
src/operators/ops/: mod.rs
src/operators/ops/dual/: diff.rs  mod.rs
src/operators/ops/filter/: brickwall_lp.rs  clip.rs  mod.rs  phase_overflow.rs  stiff_string.rs
src/operators/ops/meta/: mod.rs  range.rs
src/operators/ops/source/: mod.rs  saw_op.rs
src/sigma/: lut_sine.rs  partial.rs  sine_bank.rs  sine_bank_impl.rs
src/synthesis/: lut_sine.rs  mod.rs  partial.rs  sine_bank.rs
src/synthesis/sine_bank/: output.rs
