[package]
name = "sigma"
version = "0.1.0"
edition = "2021"

# [lib]
# proc-macro = true
# oh fuck off

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
hound = "3.4.0"

# allow test benchmarks to be more meaningful
[profile.test]
opt-level = 3